--- a/src/frontend/BinaryFormats/Makefile.am
+++ b/src/frontend/BinaryFormats/Makefile.am
@@ -28,7 +28,8 @@ libroseBinaryFormats_la_SOURCES =											\
       ElfDynamicLinking.C ElfErrorFrame.C ElfFileHeader.C ElfNote.C ElfRelocation.C ElfSection.C ElfSectionTable.C	\
       ElfSegmentTable.C ElfStringTable.C ElfSymbolTable.C ElfSymbolVersion.C						\
       JvmNode.C JvmAttribute.C JvmConstantPool.C JvmField.C JvmFileHeader.C JvmMethod.C				\
-      ExecDOS.C ExecNE.C ExecLE.C ExecGeneric.C PeSectionTable.C BinaryVxcoreParser.C
+      ExecDOS.C ExecNE.C ExecLE.C ExecGeneric.C PeSectionTable.C BinaryVxcoreParser.C \
+      CilImpl.C
 
 pkginclude_HEADERS =												\
 	ByteOrder.h DataConversion.h IntelPinSupport.h WorkLists.h SgSharedVector.h	\
