(outliner) move the runtime lib into src/midend, add two new runtime functions
* previously depending on projects/autoTuning
* moved the lib support to src/midend
* add findAndCallFunctionUsingDlopen()
* add rose_dynamic_library_exists()

JACCEL-293

--- a/src/midend/programTransformation/Makefile_variables
+++ b/src/midend/programTransformation/Makefile_variables
@@ -19,7 +19,8 @@ mptTransTrackingPath=$(mProgramTransformationPath)/transformationTracking#
 # ------------------------------------------------------------------------------
 
 mProgramTransformation_lib_ltlibraries=\
-	$(mptOmpLowering_lib_ltlibraries)
+	$(mptOmpLowering_lib_ltlibraries) \
+	$(mptOutlining_lib_ltlibraries)
 
 
 mProgramTransformation_la_sources=\
