(CIL) Updated AST Cil representation
- updated Cil class hierarchy and made the parse method in each Cil
  class public.

- Updated testLinearDissassembler2 to work with new Cil classes
  + removed some warnings.

- added padding to SgAsmCilConstant

- revised fields of SgAsmCilMethodRef

RC-1335

--- a/src/frontend/Disassemblers/Makefile.am
+++ b/src/frontend/Disassemblers/Makefile.am
@@ -25,4 +25,11 @@ pkginclude_HEADERS = BitPattern.h			\
 	AssemblerX86Init.h 					\
 	x86InstructionProperties.h
 
+
+
+noinst_PROGRAMS = json2rosetta
+
+json2rosetta_SOURCES = cilgen/src/json2rosetta.C
+## json2rosetta_CPPFLAGS = $(AM_CPPFLAGS) -I cilgen/include
+
 EXTRA_DIST = CMakeLists.txt dummyDisassembler.C
