(CMake) Add support to find Jovial dependencies with CMake
RC-1165

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -617,6 +617,19 @@ if(enable-fortran)
   set($ENV{CLASSPATH} ${CMAKE_SOURCE_DIR}/src/3rdPartyLibraries/antlr-jars/antlr-3.5.2-complete.jar::${CMAKE_SOURCE_DIR}/rc/3rdPartyLibraries/fortran-parser/OpenFortranParser-${enable-ofp-version}.jar)
 endif()
 
+if(enable-jovial)
+  include(FindAterm)
+  find_aterm()
+  if(NOT ${USE_ROSE_ATERM_SUPPORT})
+    message(FATAL_ERROR "ATerm not found and jovial was enabled. Define ATERM_ROOT with location of Aterm install.")
+  endif()
+  include(FindSGLRI)
+  find_sglri()
+  if(NOT ${USE_ROSE_STRATEGO_SUPPORT})
+    message(FATAL_ERROR "sglri not found and jovial was enabled. Define SGLRI_ROOT with location of Aterm install.")
+  endif()
+endif()
+
 option(enable-ppl "Support for Parma Polyhedral Library" OFF)
 if(enable-ppl)
   find_path(with-ppl "include/ppl.h" DOC "Path to Parma Polyhedral Library installation")
