(CMake) Update cmake default options
RC-1165

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -369,7 +369,7 @@ if(enable-cuda)
 endif()
 
 # Java
-option(enable-java "Enable Java analysis" ON)
+option(enable-java "Enable Java analysis" OFF)
 if(enable-java)
   message(STATUS "Looking for JAVA ...")
   # The FindJava script is different than all our others--it doesn't consult JAVA_ROOT. Therefore, the only
@@ -392,7 +392,7 @@ if(enable-java)
 endif()
 
 # OpenCL
-option(enable-opencl "Enable OpenCL analysis" ON)
+option(enable-opencl "Enable OpenCL analysis" OFF)
 if(enable-opencl)
   find_package(OpenCL)
   set(ROSE_BUILD_OPENCL_LANGUAGE_SUPPORT 1)
@@ -423,7 +423,7 @@ if(enable-fortran)
 endif()
 
 # PHP
-option(enable-php "Enable PHP analysis" ON)
+option(enable-php "Enable PHP analysis" OFF)
 if(enable-php)
   set(ROSE_BUILD_PHP_LANGUAGE_SUPPORT 1)
   find_path(with-php php DOC "Specify the prefix where PHP (and phc) is installed")
@@ -620,7 +620,7 @@ endif()
 if(enable-jovial)
   include(FindAterm)
   find_aterm()
-  if(NOT ${USE_ROSE_ATERM_SUPPORT})
+  if(NOT USE_ROSE_ATERM_SUPPORT)
     message(FATAL_ERROR "ATerm not found and jovial was enabled. Define ATERM_ROOT with location of Aterm install.")
   endif()
   include(FindSGLRI)
@@ -647,7 +647,7 @@ if(enable-purify-linker)
   set(USE_PURIFY_LINKER 1)
 endif()
 
-option(enable-rosehpct "enable build of the ROSE-HPCT module" ON)
+option(enable-rosehpct "enable build of the ROSE-HPCT module" OFF)
 
 option(enable-rose-openGL "enable openGL" OFF)
 if(enable-rose-openGL)
@@ -777,7 +777,7 @@ if(with-wine)
   set(ROSE_WINE_INCLUDES -I${with-wine}/include)
 endif()
 
-if(NOT WIN32)
+if((NOT WIN32) AND (enable-binary-analysis))
   include(FindOpenSSL)
   include(FindSqlite3)
   find_sqlite3()
@@ -1290,8 +1290,6 @@ if(enable-c)
   endif()
   set(C_INCLUDE_STRING "${C_INCLUDE_STRING}}")
   set(CXX_INCLUDE_STRING "${CXX_INCLUDE_STRING}}")
-message("NATHAN TEST REMOVE CXX ${CXX_INCLUDE_STRING}")
-message("NATHAN TEST REMOVE C   ${C_INCLUDE_STRING}")
 else()
   set(C_INCLUDE_STRING {\"none\"})
   set(CXX_INCLUDE_STRING {\"none\"})
@@ -1325,7 +1323,7 @@ add_subdirectory(tools)
 enable_testing()
 add_subdirectory(tests)
 add_subdirectory(tutorial)
-add_subdirectory(projects)
+#add_subdirectory(projects)
 
 ########################################################################################################################
 # Miscellaneous final actions
