--- a/src/midend/programTransformation/astOutlining/lib_test/makefile
+++ b/src/midend/programTransformation/astOutlining/lib_test/makefile
@@ -6,6 +6,8 @@ Outlining_Lib_PATH=../.
 test_02.o: test_02.cpp
 	g++ -I${Outlining_Lib_PATH} ${CXX_FLAGS} -c $<
 
+../liboutlining.a:
+	make -C ../. -f makefile-lib all
 
 # shared lib    
 #------------------------------
@@ -15,8 +17,8 @@ master_shared_library.so:rose_test_02_lib.cpp
 # build the executable from the transformed file with main() 
 #------------------------------
 # must not use -shared -fPIC, or seg fault!
-a.out:test_02.o master_shared_library.so
-	g++ -o $@ test_02.o $(AUTO_TUNING_PATH)/libautoTuning.a -Wl,--export-dynamic -g -ldl -lm  
+a.out:test_02.o master_shared_library.so ../liboutlining.a
+	g++ -o $@ test_02.o ../liboutlining.a -Wl,--export-dynamic -g -ldl -lm  
 
 #check_PROGRAM: a.out
 
