(cmake) added guarded to only add EDG to libROSE if cxx is enable
RC-1165

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -174,7 +174,9 @@ if(enable-rosehpct)
 endif()
 
 # TODO Conditional either EDG or CLang or nothing
-list(APPEND rose_LIB_SRCS $<TARGET_OBJECTS:edg_internal> $<TARGET_OBJECTS:newsage>)
+if(enable-cpp)
+  list(APPEND rose_LIB_SRCS $<TARGET_OBJECTS:edg_internal> $<TARGET_OBJECTS:newsage>)
+endif()
 
 ########################################################################################################################
 # The ROSE library itself (librose.so, librose.a, librose.dll)
