(Jovial) Fixed AST for EQV operator
- EQV now produces an SgBitEqvOp node
- Updated unparser for new node

GL-162

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -231,6 +231,7 @@ JOVIAL_TESTCODES = \
  gitlab-issue-13.jov                    \
  gitlab-issue-41.jov                    \
  gitlab-issue-84.jov                    \
+ gitlab-issue-162.jov                   \
  charlie.jov                            \
  shadow.jov                             \
  comments.jov
