(Binary Analysis) Unified location types
== API CHANGES ==

* Rose::BinaryAnalysis::CallingConvention::ParameterLocation has been
  renamed to Rose::BinaryAnalysis::ConcreteLocation.

  Other than the name change, the API is nearly identical and all
  changes will cause compile-time errors. The one change that might be
  confusing is the STACK enum has been renamed to RELATIVE.

* The following types now all inherit from a new Rose::Location base
  type that defines a common API for all location types:

   + Rose::SourceLocation
   + Rose::BinaryAnalysis::AbstractLocation
   + Rose::BinaryAnalysis::ConcreteLocation

RPM-193

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -293,6 +293,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/CallingConvention.h						\
 	Rose/BinaryAnalysis/CodeInserter.h						\
 	Rose/BinaryAnalysis/Concolic.h							\
+	Rose/BinaryAnalysis/ConcreteLocation.h						\
 	Rose/BinaryAnalysis/Concolic/Architecture.h					\
 	Rose/BinaryAnalysis/Concolic/BasicTypes.h					\
 	Rose/BinaryAnalysis/Concolic/ConcolicExecutor.h					\
@@ -525,6 +526,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/FormattedTable.h								\
 	Rose/GraphUtility.h								\
 	Rose/Initialize.h								\
+	Rose/Location.h									\
 	Rose/Progress.h									\
 	Rose/RecursionCounter.h								\
 	Rose/SourceLocation.h								\
