(CIL) Add Cil Metadata classes and processing
- add ROSETTA generator
  src/frontend/Disassemblers/cilgen

- regenerated files

- added classes that represent MetadataRoot
  and the streams underneath.

- updated the class hierarchy
  * any metadata is now under SgAsmCilMetadata
  * the entry point is SgAsmCilMetadataRoot
  * the root contains the five streams (aka heaps)
  * the metadata heap contains the metadata tables

RC-1335

--- a/src/frontend/BinaryFormats/CMakeLists.txt
+++ b/src/frontend/BinaryFormats/CMakeLists.txt
@@ -49,6 +49,9 @@ add_library(roseBinaryFormats OBJECT
   PeStringTable.C
   PeSymbolTable.C
 
+  ### CIL class implementations
+  CilImpl.C
+
   ### Other Formats (partial implementations and not so well tested) ###
   ExecDOS.C
   ExecNE.C
