(ByteCode) Implemented SgAsmCliHeader
- SgAsmCliHeader is the entry class for reading CIL managed code
- Created and called parse of SgAsmCilMetadataRoot (child of SgAsmCliHeader)
- Refactored for C++11 (NULL -> nullptr)

JVM-1
LDRD_SI-1

--- a/src/frontend/BinaryFormats/CMakeLists.txt
+++ b/src/frontend/BinaryFormats/CMakeLists.txt
@@ -51,6 +51,7 @@ add_library(roseBinaryFormats OBJECT
 
   ### CIL class implementations
   CilImpl.C
+  CliHeader.C
 
   ### Other Formats (partial implementations and not so well tested) ###
   ExecDOS.C
