(Testing) Install error-pruning script for portability testing
RPM-203

--- a/projects/MatrixTesting/scripts/Makefile.am
+++ b/projects/MatrixTesting/scripts/Makefile.am
@@ -4,6 +4,7 @@ bin_SCRIPTS =					\
 	rose-matrix-count-warnings		\
 	rose-matrix-monitor			\
 	rose-matrix-output			\
+	rose-matrix-prune-errors		\
 	rose-matrix-run				\
 	rose-matrix-show-latest			\
 	rose-matrix-slave-run			\
