(ByteCode) Fixes for RoseNamespace.pl policy checker
- Also added initial stubs for CIL analysis to Rose::BinaryAnalysis::ByteCode

JVM-1
LDRD_SI-1

--- a/src/Rose/BinaryAnalysis/ByteCode/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/ByteCode/CMakeLists.txt
@@ -1,12 +1,13 @@
 add_library(roseBinaryAnalysisByteCode OBJECT
-  ByteCode.C
+  Analysis.C
   Jvm.C
   )
 
 add_dependencies(roseBinaryAnalysisByteCode rosetta_generated)
 
 install(FILES
-  ByteCode.h
+  Analysis.h
+  Cil.h
   Jvm.h
 
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/BinaryAnalysis/ByteCode)
