(Support) Added Rose::StringUtility::toNumber
* New function to parse a number from a string. This supports:

  + Template parameter says what destination type, which must be
    a signed or unsigned integral type.

  + Strict range checking without using any C++ undefined
    behavior. Overflows throw a Rose::Exception that starts with the
    string "overflow error:"

  + Exact parsing with no leading or trailing white space consumed.

  + Parse errors throw a Rose::Exception that starts with "syntax
    error:"

  + Support for "0x" and "0b" radix selector prefixes for hexadecimal
    and binary but no support for octal (seldom used and prefix of
    just "0" was a poor design). We could add "0o" (like Rust) later
    if needed.

  + Support for digit separator character "_" but still quite
    strict. For instance, the separator cannot appear at the beginning
    or end and cannot be repeated consecutively.

  + Unit tests included

RPM-210

--- a/tests/smoke/unit/Utility/Makefile.am
+++ b/tests/smoke/unit/Utility/Makefile.am
@@ -161,6 +161,20 @@ testYaml.passed: $(top_srcdir)/scripts/test_exit_status testYaml
 		CMD="./testYaml"		\
 		$< $@
 
+########################################################################################################################
+# Number parsing
+########################################################################################################################
+
+noinst_PROGRAMS += testToNumber
+testToNumber_SOURCES = testToNumber.C
+
+TEST_TARGETS += testToNumber.passed
+testToNumber.passed: $(top_srcdir)/scripts/test_exit_status testToNumber
+	@$(RTH_RUN)					\
+		TITLE="test number parsing [$@]"	\
+		CMD="./testToNumber"			\
+		$< $@
+
 ###############################################################################################################################
 # Boilerplate
 ###############################################################################################################################
